<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".view.fragment.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/avatarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatarImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@color/colorPrimary" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ahmed_nassar"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@+id/userTypeTV"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/avatarContainer"
            app:layout_constraintTop_toTopOf="@+id/avatarContainer" />

        <TextView
            android:id="@+id/userTypeTV"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_light_btn_bg"
            android:gravity="center"
            android:text="@string/pro"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/usernameTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/usernameTv"
            app:layout_constraintTop_toTopOf="@+id/usernameTv" />

        <TextView
            android:id="@+id/userProTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/android_developer"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorGreyDark"
            app:layout_constraintStart_toStartOf="@+id/usernameTv"
            app:layout_constraintTop_toBottomOf="@+id/usernameTv" />

        <Button
            android:id="@+id/followBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_dark_btn_bg"
            android:text="@string/follow"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/messageBtn"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/avatarContainer"
            app:layout_constraintTop_toBottomOf="@+id/userProTv"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/messageBtn"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/grey_btn_bg"
            android:text="@string/message"
            android:textAllCaps="false"
            android:textColor="@color/colorIndigo"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/followBtn"
            app:layout_constraintTop_toTopOf="@+id/followBtn" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_btn_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/messageBtn"
            app:layout_constraintTop_toTopOf="@+id/messageBtn"
            app:srcCompat="@drawable/ic_more_horiz_indigo_24dp"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="120dp" />

        <TextView
            android:id="@+id/likeCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_249"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@+id/followersCountTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/likesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/likes"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorGreyDark"
            app:layout_constraintEnd_toEndOf="@id/likeCountTv"
            app:layout_constraintStart_toStartOf="@id/likeCountTv"
            app:layout_constraintTop_toBottomOf="@+id/likeCountTv" />

        <TextView
            android:id="@+id/followersCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_127k"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toStartOf="@+id/followingCountTv"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/likeCountTv"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/followersTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/likes"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorGreyDark"
            app:layout_constraintEnd_toEndOf="@id/followersCountTv"
            app:layout_constraintStart_toStartOf="@id/followersCountTv"
            app:layout_constraintTop_toBottomOf="@+id/followersCountTv" />

        <TextView
            android:id="@+id/followingCountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_521"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/followersCountTv"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/followingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/following"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorGreyDark"
            app:layout_constraintEnd_toEndOf="@+id/followingCountTv"
            app:layout_constraintStart_toStartOf="@+id/followingCountTv"
            app:layout_constraintTop_toBottomOf="@+id/followingCountTv" />

        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorGreyLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/likesTv" />

        <TextView
            android:id="@+id/aboutTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="@+id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/aboutUserTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/about_me"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorGreyDark"
            app:layout_constraintEnd_toEndOf="@+id/line1"
            app:layout_constraintStart_toStartOf="@+id/aboutTv"
            app:layout_constraintTop_toBottomOf="@+id/aboutTv" />

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorGreyLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutUserTv" />

        <include
            android:id="@+id/friendsSection"
            layout="@layout/profile_friends_section_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line2"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorGreyLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friendsSection" />

        <include
            layout="@layout/profile_photos_section_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/line3"
            app:layout_constraintStart_toStartOf="@id/line3"
            app:layout_constraintTop_toBottomOf="@id/line3" />

        <include
            layout="@layout/loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>